--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -141,7 +141,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= item.name %>
+            <%= "item.name" %>
           </h3>
           <div class='item-price'>
             <span><%= item.price %>円<br><%= item.delivery_cost_id %></span>
@@ -151,7 +151,6 @@
             </div>
           </div>
         </div>
-        <% end %>
         <% end %>
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
