--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -141,7 +141,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "item.name" %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
             <span><%= item.price %>円<br><%= item.delivery_cost_id %></span>
