--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,10 +127,11 @@
 
     <ul class='item-lists'>
       <li class='list'>
-        <% @items.each do |item| %>
+      <%# # 商品一覧機能 131, 133, 134, 145, 148,%>
+        <%# <% @items.each do |item| %> %>
         <div class='item-img-content'>
-          <%= link_to item_path(item.id), method: :get do %>
-          <%= image_tag item.image, class: "item-img" %>
+          <%# <%= link_to item_path(item.id), method: :get do %> %>
+          <%# <%= image_tag item.image, class: "item-img" %> %>
         <% end %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
@@ -141,10 +142,10 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= item.name %>
+            <%# <%= item.name %> %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.delivery_cost_id %></span>
+            <%# <span><%= item.price %>円<br><%#= item.delivery_cost_id</span> %> %>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
