--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-<%= render "devise/shared/second-header"%>
+<%= render "shared/second-header"%>
 
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
@@ -12,7 +12,7 @@
   </div>
 
   <% if @user.errors.any? %>
-  <%= render 'devise/shared/error_messages', model: f.object %>
+  <%= render 'shared/error_messages', model: f.object %>
   <% end %> 
 
   <div class="form-group">
@@ -106,4 +106,4 @@
 </div>
 <% end %>
 
-<%= render "devise/shared/second-footer" %>
+<%= render "shared/second-footer" %>
