--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,12 +127,11 @@
 
     <ul class='item-lists'>
       <li class='list'>
-      <%# # 商品一覧機能 131, 133, 134, 145, 148,%>
-        <%# <% @items.each do |item| %> 
+        <% @items.each do |item| %>
         <div class='item-img-content'>
-          <%# <%= link_to item_path(item.id), method: :get do %> 
-          <%# <%= image_tag item.image, class: "item-img" %> 
-        <%# <% end %> 
+          <%= link_to item_path(item.id), method: :get do %> 
+           <%= image_tag item.image, class: "item-img" %> 
+          <% end %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -142,17 +141,17 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%# <%= item.name %> 
+            <%= item.name %>
           </h3>
           <div class='item-price'>
-            <%# <span><%= item.price %>円<br><%#= item.delivery_cost_id</span> %> 
+            <span><%= item.price %>円<br><%= item.delivery_cost.name%></span> 
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
-        <%# <% end %> 
+        <% end %> 
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
