--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -153,8 +153,8 @@
         </div>
         <% end %> 
       </li>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <%# 商品がある場合は表示されないようにしましょう %>
+      
+      <% if @items.nil? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
@@ -172,14 +172,15 @@
         </div>
         <% end %>
       </li>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <% end %>
+
     </ul>
   </div>
-  <%# /商品一覧 %>
 </div>
+
 <%= link_to new_item_path, class: 'purchase-btn'  do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
+
 <%= render "shared/footer" %>
