--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -154,7 +154,7 @@
         <% end %> 
       </li>
       
-      <%# <% if @items.nil? %> %>
+      <% if @items.nil? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
@@ -170,7 +170,7 @@
             </div>
           </div>
         </div>
-        <%# <% end %> %>
+        <% end %>
       </li>
       <% end %>
 
