--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,11 +4,11 @@
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
-    <%# # 商品詳細機能 8,11,20,23,27,29,31 %>
-      <%= @item.name %>
+    # 商品詳細機能 8,11,20,23,27,29,31
+      <%# <%= @item.name %> %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag @item.image ,class:"item-box-img" %>
+      <%# <%= image_tag @item.image ,class:"item-box-img" %> %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
@@ -17,18 +17,18 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ <%= @item.price %>
+        <%# ¥ <%= @item.price %> %>
       </span>
       <span class="item-postage">
-        <%= @item.delivery_cost_id %>
+        <%# <%= @item.delivery_cost_id %> %>
       </span>
     </div>
 
-    <% if user_signed_in? && current_user.id == @item.user_id %>
+    <%# <% if user_signed_in? && current_user.id == @item.user_id %> %>
 
-    <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
+    <%# <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %> %>
     <p class='or-text'>or</p>
-    <%= link_to '削除', "/items/#{@item.id}", method: :delete, class:'item-destroy' %>
+    <%# <%= link_to '削除', "/items/#{@item.id}", method: :delete, class:'item-destroy' %> %>
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
