--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,14 +28,13 @@
         <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %> 
         <p class='or-text'>or</p>
         <%= link_to '削除', "#", method: :delete, class:'item-destroy' %> 
-      <% end %>
-      <% if current_user.id != @item.user_id %>
+      <% else current_user.id != @item.user_id %>
         <%= link_to '購入画面に進む', "#" ,class:"item-red-btn" %>
       <% end %>
     <% end %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @item.introduction %></span>
     </div>
     <table class="detail-table">
       <tbody>
@@ -101,7 +100,7 @@
     </a>
   </div>
   <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
-  <a href=“#” class=‘another-item’><%= "商品のカテゴリー名" %>をもっと見る</a>
+  <a href=“#” class=‘another-item’><%= @item.category.name %>をもっと見る</a>
   <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
 </div>
 
