--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,3 @@
- <%# 商品編集機能 %>
-<%# <div class="items-sell-contents">
- <%= render partial: 'form', locals:{ item: @item } %>
-</div> %>
+ <div class="items-sell-contents"> 
+  <%= render partial: 'form', locals:{ item: @item } %>
+</div> 
