--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,5 @@
 <%= render "shared/second-header"%>
 
-<%= form_with(model: @user_purchase, url: item_orders_path, local: true) do |form| %>
-<%= render 'shared/error_messages', model: @user_purchase %> 
-
 <div class='transaction-contents'>
   <div class='transaction-main'>
     <h1 class='transaction-title-text'>
@@ -34,7 +31,9 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+  <%= form_with(model: @user_purchase, url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap', local: true) do |f| %>
+   <%= render 'shared/error_messages', model: @user_purchase %> 
+
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -130,5 +129,4 @@
     <% end %>
   </div>
 </div>
-<% end %>
 <%= render "shared/second-footer"%>
